--- a/package.json
+++ b/package.json
@@ -10,24 +10,90 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.26.3",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@fontsource/roboto": "5.1.1",
+    "@inquirer/prompts": "7.3.1",
+    "@mui/icons-material": "6.4.4",
     "@mui/material": "^7.3.2",
+    "@mui/system": "6.4.8",
+    "@tanstack/react-query": "^5.72.2",
+    "apisauce": "^3.1.1",
+    "cross-env": "7.0.3",
+    "husky": "9.1.7",
+    "i18next": "24.2.3",
+    "i18next-browser-languagedetector": "8.0.4",
+    "identity-obj-proxy": "3.0.0",
+    "intl-pluralrules": "2.0.1",
+    "local-storage": "2.0.0",
+    "lucide-react": "^0.544.0",
+    "npm-run-all": "4.1.5",
+    "prettier": "3.5.3",
+    "prop-types": "15.8.1",
     "react": "^19.1.1",
-    "react-cookie": "^8.0.1",
+    "react-cookie": "7.2.2",
     "react-dom": "^19.1.1",
-    "react-router": "^7.8.2"
+    "react-i18next": "15.4.1",
+    "react-router": "^7.8.2",
+    "react-toastify": "^11.0.5",
+    "react-tooltip": "5.28.0",
+    "redux-saga": "1.3.0",
+    "resize-observer-polyfill": "1.5.1",
+    "rimraf": "6.0.1",
+    "stylelint-config-standard-scss": "14.0.0",
+    "stylelint-scss": "6.11.1",
+    "ts-node": "10.9.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/eslint-parser": "^7.26.5",
+    "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.33.0",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/react": "16.2.0",
+    "@testing-library/user-event": "14.5.2",
+    "@types/lodash": "4.17.16",
+    "@types/node": "22.13.13",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/coverage-v8": "3.1.1",
+    "add": "2.0.6",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "babel-plugin-transform-vite-meta-env": "^1.0.3",
+    "deepmerge": "4.3.1",
+    "esbuild": "^0.25.2",
     "eslint": "^9.33.0",
+    "eslint-import-resolver-alias": "1.1.2",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-prettier": "5.2.3",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-dom": "1.38.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-react-x": "1.38.0",
+    "eslint-plugin-redux-saga": "1.3.2",
     "globals": "^16.3.0",
+    "jsdom": "26.0.0",
+    "lint-staged": "15.2.10",
+    "lodash": "4.17.21",
+    "moment": "2.30.1",
+    "postcss": "^8.5.3",
+    "raf": "3.4.1",
+    "sass-embedded": "1.83.4",
+    "shelljs": "0.8.5",
+    "stylelint": "^16.17.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-plugin-babel": "^1.3.2",
+    "vite-plugin-html": "3.2.2",
+    "vitest": "3.1.1"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
